# system-design

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  OVERVIEW.md  README.md  ZEA_OVERVIEW.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: api-reference.md  architecture.md  getting-started.md
examples/: architecture_graph.json  fastapi_architecture.html  fastapi_system_design.html  nestjs_architecture.html  nestjs_system_design.html  repository_inventory.json
skills/claude-code/: SKILL.md
skills/codex/: plugin.json
skills/gemini/: plugin.yaml
system_design-0.1.0/: LICENSE  README.md
system_design-0.1.0/system_design/ai/: prompts.py
system_design-0.1.0/system_design/cli/: main.py
system_design-0.1.0/system_design/core/: config.py
system_design-0.1.0/system_design/discovery/: framework_detector.py  package_detector.py
system_design/ai/: analyzer.py
system_design/core/: evidence.py  logging.py
system_design/discovery/: doc_detector.py  language_detector.py  scanner.py
system_design/graph/: schema.py
system_design/inference/: engine.py  service_detector.py
system_design/plugins/: base.py
system_design/visualization/: __init__.py  threejs_generator.py
tests/benchmark/: README.md  metrics.py  runner.py  targets.py  test_benchmark_smoke.py
zea-0.1.0/: README.md  pyproject.toml
zea-0.1.0/zea/cli/: main.py
zea/ai/: analyzer.py  prompts.py
zea/cli/: main.py
zea/core/: evidence.py  logging.py
zea/discovery/: models.py
zea/graph/: builder.py
zea/inference/: database_detector.py  dependency_detector.py  engine.py  event_detector.py
zea/plugins/: base.py
zea/visualization/: threejs_generator.py
(+26 files in other folders)
