[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "system-design"
version = "0.1.0"
description = "system-design — Architecture Intelligence Engine: turn any repo into a 3D architecture graph"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["architecture", "system-design", "knowledge-graph", "code-analysis", "AI", "developer-tools"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pydantic>=2.0",
    "networkx>=3.0",
    "tree-sitter>=0.23",
]

[project.urls]
Homepage = "https://github.com/manish-surya/system-design"
Repository = "https://github.com/manish-surya/system-design"
Documentation = "https://github.com/manish-surya/system-design#readme"
"Bug Tracker" = "https://github.com/manish-surya/system-design/issues"

[project.scripts]
system-design = "system_design.cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["system_design*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
